--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button id="lets-order-btn"><strong>Let's Order</strong></button>
             </div>
             <div class="hero-images">
-                <img src="images/Main-Icon.png" alt="Main Icon" class="main icon-img" />
+                <img src="images/Main-Icon.png" alt="Main Icon" class="hero-img" />
             </div>
         </section>
 
