--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <li><a href="#contact" class="nav-link">Contact</a></li>
                 <li><a href="menu.html" class="nav-link">Menu</a></li>
             </ul>
-            <button class="cart-btn" aria-label="Cart">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart" viewBox="0 0 24 24">
-                    <circle cx="9" cy="21" r="1"></circle>
-                    <circle cx="20" cy="21" r="1"></circle>
-                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+            <button class="cart-btn" id="open-checkout-btn" aria-label="Cart" onclick="window.location.href='checkout.html?from=index'">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <circle cx="9" cy="21" r="1" />
+                    <circle cx="20" cy="21" r="1" />
+                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61l1.38-7.39H6" />
                 </svg>
             </button>
         </nav>
