--- a/checkout.html
+++ b/checkout.html
@@ -158,7 +158,7 @@
         <button id="back-btn" onclick="window.location.href='menu.html'">Back to Menu</button>
     </div>
 
-    <div class="payment-overlay" id="payment-overlay">
+<div class="payment-overlay" id="payment-overlay">
   <div class="payment-popup">
     <p><strong>✅ Thank You For Your Payment!<br>Please wait for your order.</strong></p>
     <p>Please rate your order:</p>
@@ -175,7 +175,7 @@
 
 <!-- Modal Pilihan Metode Pembayaran -->
 <div id="payment-method-modal" style="display: none;" class="payment-popup">
-  <p><strong>Pilih Metode Pembayaran:</strong></p>
+  <p><strong>Choose Payment Method:</strong></p>
   <button onclick="choosePayment('cash')">Cash</button>
   <button onclick="choosePayment('qris')">Qris</button>
 </div>
