--- a/checkout.html
+++ b/checkout.html
@@ -6,145 +6,165 @@
     <title>Burns&Wraps Checkout</title>
     <link rel="stylesheet" href="css/style.css" />
     <style>
-        body {
-            background-color: rgba(0, 0, 0, 0.5);
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+    body {
+        background-color: rgba(0, 0, 0, 0.5);
+        margin: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-        .checkout-container {
-            background-color: #fff8f0;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 8px 16px rgba(211, 84, 0, 0.4);
-            max-width: 400px;
-            width: 90%;
-            text-align: center;
-        }
+    .checkout-container {
+        background-color: #fff8f0;
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0 8px 16px rgba(211, 84, 0, 0.4);
+        max-width: 400px;
+        width: 90%;
+        text-align: center;
+    }
 
-        h2 {
-            color: #d35400;
-            margin-bottom: 20px;
-        }
+    h2 {
+        color: #d35400;
+        margin-bottom: 20px;
+    }
 
-        #order-items {
-            list-style: none;
-            padding: 0;
-            margin-bottom: 20px;
-            max-height: 300px;
-            overflow-y: auto;
-            text-align: left;
-        }
+    #order-items {
+        list-style: none;
+        padding: 0;
+        margin-bottom: 20px;
+        max-height: 300px;
+        overflow-y: auto;
+        text-align: left;
+    }
 
-        #order-items li {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            font-size: 1rem;
-            color: #444;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+    #order-items li {
+        padding: 10px;
+        border-bottom: 1px solid #ddd;
+        font-size: 1rem;
+        color: #444;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-        .item-info {
-            flex: 1;
-        }
+    .item-info {
+        flex: 1;
+    }
 
-        .item-controls {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            margin-left: 10px;
-        }
+    .item-controls {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        margin-left: 10px;
+    }
 
-        .item-controls button {
-            background-color: #e67e22;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 0.9rem;
-            transition: background-color 0.2s ease;
-            color: white;
-        }
+    .item-controls button {
+        background-color: #e67e22;
+        border: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 0.9rem;
+        transition: background-color 0.2s ease;
+        color: white;
+    }
 
-        .item-controls button:hover {
-            background-color: #d35400;
-        }
+    .item-controls button:hover {
+        background-color: #d35400;
+    }
 
-        #total-price {
-            font-weight: bold;
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-            color: #d35400;
-            text-align: right;
-        }
+    #total-price {
+        font-weight: bold;
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+        color: #d35400;
+        text-align: right;
+    }
 
-        #pay-now-btn,
-        #back-btn {
-            background-color: #e67e22;
-            color: white;
-            border: none;
-            padding: 12px 30px;
-            border-radius: 25px;
-            cursor: pointer;
-            font-size: 1.1rem;
-            transition: background-color 0.3s ease;
-            width: 100%;
-            margin-top: 10px;
-        }
+    #pay-now-btn,
+    #back-btn {
+        background-color: #e67e22;
+        color: white;
+        border: none;
+        padding: 12px 30px;
+        border-radius: 25px;
+        cursor: pointer;
+        font-size: 1.1rem;
+        transition: background-color 0.3s ease;
+        width: 100%;
+        margin-top: 10px;
+    }
 
-        #pay-now-btn:hover,
-        #back-btn:hover {
-            background-color: #d35400;
-        }
+    #pay-now-btn:hover,
+    #back-btn:hover {
+        background-color: #d35400;
+    }
 
-        .payment-popup {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #fff8f0;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 0 8px 16px rgba(211, 84, 0, 0.4);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 10;
-}
+    .payment-popup {
+        background: #fff8f0;
+        border-radius: 15px;
+        padding: 20px;
+        box-shadow: 0 8px 16px rgba(211, 84, 0, 0.4);
+        width: 90%;
+        max-width: 400px;
+        text-align: center;
+    }
 
-.payment-popup button {
-    margin: 10px;
-    padding: 10px 20px;
-    border: none;
-    background-color: #e67e22;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 1rem;
-}
+    /* Tombol-tombol normal di dalam popup */
+    .payment-popup .action-btn {
+        margin: 10px;
+        padding: 10px 20px;
+        border: none;
+        background-color: #e67e22;
+        color: white;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 1rem;
+        transition: background-color 0.3s ease;
+    }
 
-.payment-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    backdrop-filter: blur(5px); /* efek blur */
-    background-color: rgba(0, 0, 0, 0.3); /* semi-transparan */
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 9; /* di bawah .payment-popup (z-index: 10) */
-}
+    .payment-popup .action-btn:hover {
+        background-color: #d35400;
+    }
 
-    </style>
+    .payment-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        backdrop-filter: blur(5px);
+        background-color: rgba(0, 0, 0, 0.3);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 9;
+    }
+
+    /* Tombol silang (close button) */
+    .close-btn {
+        position: absolute;
+        top: 12px;
+        right: 12px;
+        font-size: 24px;
+        font-weight: bold;
+        color: #d35400;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        padding: 2px 8px;
+        border-radius: 50%;
+        transition: color 0.3s ease;
+    }
+
+    .close-btn:hover {
+        color: #b93612;
+        background-color: transparent;
+    }
+</style>
 </head>
 <body>
     <div class="checkout-container">
@@ -174,17 +194,23 @@
 </div>
 
 <!-- Modal Pilihan Metode Pembayaran -->
-<div id="payment-method-modal" style="display: none;" class="payment-popup">
-  <p><strong>Choose Payment Method:</strong></p>
-  <button onclick="choosePayment('cash')">Cash</button>
-  <button onclick="choosePayment('qris')">Qris</button>
+<div class="payment-overlay" id="modal-overlay" style="display: none;">
+  <div class="payment-popup modal-center" id="payment-method-modal">
+    <button class="close-btn" onclick="closePaymentModal()">×</button>
+    <p><strong>Choose Payment Method:</strong></p>
+    <button onclick="choosePayment('cash')">Cash</button>
+    <button onclick="choosePayment('qris')">Qris</button>
+  </div>
 </div>
 
 <!-- QRIS Section -->
-<div id="qris-section" style="display: none; text-align:center;" class="payment-popup">
-  <p><strong>Scan QR Code for Payment:</strong></p>
-  <img src="images/Qris.png" alt="QRIS Code" style="width:200px; height:auto; margin:10px auto;" />
-  <button onclick="finishQrisPayment()">Finish</button>
+<div class="payment-overlay" id="qris-overlay" style="display: none;">
+  <div class="payment-popup modal-center">
+    <button class="close-btn" onclick="closeQrisModal()">×</button>
+    <p><strong>Scan QR Code for Payment:</strong></p>
+    <img src="images/Qris.png" alt="QRIS Code" style="width:200px; height:auto; margin:10px auto;" />
+    <button onclick="finishQrisPayment()">Finish</button>
+  </div>
 </div>
 
 <!-- Blur background untuk modal metode pembayaran -->
@@ -196,20 +222,32 @@ function choosePayment(method) {
     document.getElementById('payment-method-modal').style.display = 'none';
 
     if (method === 'cash') {
+        localStorage.removeItem('orders');
         document.getElementById('modal-overlay').style.display = 'none';
         showRating();
     } else if (method === 'qris') {
-        document.getElementById('qris-section').style.display = 'flex';
+        document.getElementById('qris-overlay').style.display = 'flex';
     }
 }
 
+function closePaymentModal() {
+  document.getElementById('payment-method-modal').style.display = 'none';
+  document.getElementById('modal-overlay').style.display = 'none';
+}
+
+function closeQrisModal() {
+  document.getElementById('qris-overlay').style.display = 'none';
+  document.getElementById('modal-overlay').style.display = 'none';
+}
+
 function finishQrisPayment() {
-    document.getElementById('qris-section').style.display = 'none';
+    document.getElementById('qris-overlay').style.display = 'none';
     document.getElementById('modal-overlay').style.display = 'none';
     showRating();
 }
 
 function showRating() {
+    localStorage.removeItem('orders');
     const overlay = document.getElementById('payment-overlay');
     overlay.style.display = 'flex';
 
@@ -305,7 +343,6 @@ btnMinus.onclick = () => {
     // Kalau sudah 1, tidak bisa dikurangi lagi
 };
 
-
         // Tombol plus
         const btnPlus = document.createElement('button');
         btnPlus.textContent = '+';
@@ -340,9 +377,6 @@ btnMinus.onclick = () => {
 }
 
 payNowBtn.addEventListener('click', () => {
-    localStorage.removeItem('orders');
-    loadOrders();
-
     const notes = document.getElementById('order-notes').value;
     localStorage.setItem('orderNotes', notes);
 
